[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Entities/Run.png" type="Texture" id=1]
[ext_resource path="res://scripts/VSlider.gd" type="Script" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 13.5, 18 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -13.75, -31.25 )
scale = Vector2( 0.527344, 0.496094 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -15.5, -19 )
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 8.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GravitySlider" type="VSlider" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -41.0
margin_right = -49.0
margin_bottom = 52.0
rect_scale = Vector2( 2, 2 )
min_value = -1000.0
max_value = 1000.0
value = 1000.0
tick_count = 2
script = ExtResource( 2 )

[node name="TimeSlow" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -76.0
margin_top = 18.0
margin_right = -40.0
margin_bottom = 55.0
focus_mode = 0
enabled_focus_mode = 0

[node name="PowerTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/TimeSlow" to="." method="_on_TimeSlow_pressed"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]
